--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -24,7 +24,7 @@
             const tgAuthResult = params.get('tgAuthResult');
 
             // if(userId && tgAuthResult) {
-            //     fetch(`https://8f08-78-177-177-231.ngrok-free.app/telegram/telegramAddConnect`, {
+            //     fetch(`https://f642rqhc-8000.euw.devtunnels.ms/telegram/telegramAddConnect`, {
             //         method: 'POST',
             //         headers: {
             //             'Content-Type': 'application/json'
@@ -49,7 +49,7 @@
                 // Sunucuya POST isteği gönder
                 (async () => {
                     try {
-                        const response = await fetch(`https://8f08-78-177-177-231.ngrok-free.app/telegram/connect`, {
+                        const response = await fetch(`https://f642rqhc-8000.euw.devtunnels.ms/telegram/connect`, {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
